[package]
name = "bunq"
version = "0.1.0"
authors = ["James Laver <james.laver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
tokio="0.1"
hyper = "0.12"
hyper-tls = "0.3"
ring = "0.16"
base64 = "0.10"
ascii = "0.9"
Inflector = "0.11.4"
im="13"
http="0.1"
stream_throttle="0.2"